<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    style="@style/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/tintedIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTagLine1"
        style="@style/darkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/tag_line_1"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/guide85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTagLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/tag_line_2"
        android:textColor="@color/accentColor"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/guide85"
        app:layout_constraintStart_toEndOf="@id/tvTagLine1" />

    <TextView
        android:id="@+id/tvTagLine3"
        style="@style/darkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/tag_line_3"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@id/tvTagLine1"
        app:layout_constraintTop_toBottomOf="@id/tvTagLine2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>