<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.58"
        android:contentDescription="@string/screen_draw"
        android:src="@drawable/login_draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide95V"
        app:layout_constraintStart_toStartOf="@id/guide55V"
        app:layout_constraintTop_toTopOf="@id/guide60H" />

    <TextView
        android:id="@+id/tvAppName"
        style="@style/darkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hankrnd_bold"
        android:letterSpacing="0.1"
        android:text="@string/app_label"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guide10H"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvScreenHeading"
        style="@style/darkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@id/guide30H"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imvLoginBar"
        style="@style/darkText"
        android:layout_width="45dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/login_bar"
        android:scaleType="fitXY"
        android:src="@drawable/ic_line"
        app:layout_constraintStart_toStartOf="@id/tvScreenHeading"
        app:layout_constraintTop_toBottomOf="@id/tvScreenHeading" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/transparent"
        android:fontFamily="@font/hankrnd_bold"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guide80V"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide45H" />

    <ImageView
        style="@style/darkText"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/edit_text_back"
        android:src="@drawable/ed_backline"
        app:layout_constraintBottom_toBottomOf="@id/etMobileNumber"
        app:layout_constraintEnd_toEndOf="@id/etMobileNumber"
        app:layout_constraintStart_toStartOf="@id/etMobileNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent"
        android:fontFamily="@font/hankrnd_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guide80V"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMobileNumber" />

    <ImageView
        style="@style/darkText"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/edit_text_back"
        android:src="@drawable/ed_backline"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvScreenHelper"
        style="@style/darkText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/hankrnd_regular"
        android:text="@string/mobilenum_confirm"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/guide55V"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/primaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@id/guide55V"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/tvScreenHelper" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        style="@style/secondaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/hankrnd_bold"
        android:text="@string/sign_up"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/guide55V"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide60H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide45H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide30H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide95V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide80V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide55V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />


</androidx.constraintlayout.widget.ConstraintLayout>